@@ -1,6 +1,8 @@
 freeipa (4.4.4-2) UNRELEASED; urgency=medium
 
   * control: Add a dependency on fonts-open-sans. (LP: #1656236)
+  * fix-opendnssec-install.diff: Updated for opendnssec 2.1.x. (LP:
+    #1703836)
 
  -- Timo Aaltonen <tjaalton@debian.org>  Mon, 09 Oct 2017 10:07:36 +0300
 
